--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "react-no-ssr",
+  "name": "@chuyik/react-no-ssr",
   "version": "2.0.0",
   "description": "React component to wrap non SSR components.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/kadirahq/react-no-ssr.git"
+    "url": "https://github.com/chuyik/react-no-ssr.git"
   },
   "license": "MIT",
   "scripts": {
     "build": "npm run remove:dist && babel ./src --ignore ./src/__tests__ --out-dir ./dist",
-    "prepublish": "npm run build",
     "lint": "eslint ./src",
     "lint:fix": "yarn lint --fix",
     "lint:staged": "lint-staged",
@@ -17,9 +16,6 @@
     "test": "NODE_ENV=test jest",
     "test:watch": "NODE_ENV=test jest --watch",
     "test:coverage": "NODE_ENV=test jest --coverage"
-  },
-  "dependencies": {
-    "@babel/runtime": "^7.0.0"
   },
   "devDependencies": {
     "@babel/cli": "7.1.0",
@@ -30,20 +26,21 @@
     "@babel/preset-env": "7.1.0",
     "@babel/preset-react": "7.0.0",
     "@babel/register": "7.0.0",
+    "@babel/runtime": "^7.0.0",
     "babel-eslint": "9.0.0",
-    "babel-jest": "23.6.0",
+    "babel-jest": "^24.1.0",
     "enzyme": "3.6.0",
     "enzyme-adapter-react-16": "1.5.0",
     "enzyme-to-json": "3.3.4",
     "eslint": "5.6.0",
-    "eslint-config-jest-enzyme": "6.1.2",
+    "eslint-config-jest-enzyme": "^7.0.1",
     "eslint-config-prettier": "3.0.1",
     "eslint-plugin-babel": "5.2.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-prettier": "2.6.2",
     "eslint-plugin-react": "7.11.1",
-    "jest": "23.6.0",
-    "jest-enzyme": "6.1.2",
+    "jest": "^24.1.0",
+    "jest-enzyme": "^7.0.1",
     "jsdom": "12.0.0",
     "lint-staged": "7.3.0",
     "prettier": "1.14.3",
@@ -52,7 +49,7 @@
     "rimraf": "2.6.2"
   },
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0 || ^16.0.0"
+    "react": "^0.14.0 || ^15.0.0 || >16.0.0"
   },
   "lint-staged": {
     "*.js": [
